# photo-frame

./: .dockerignore  .editorconfig  .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  bacon.toml  biome.json  deny.toml  docker-compose.yml  justfile  lefthook.yml  mise.toml  renovate.json  rustfmt.toml  taplo.toml  typos.toml
.cargo/: config.toml
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/workflows/: bench.yml  ci.yml  pages.yml  runtime-bench.yml  security.yml
crates/photo-frame/: Cargo.toml
crates/photo-frame-bench/: Cargo.toml
crates/photo-frame-bench/benches/: icount.rs  pipeline.rs
crates/photo-frame-bench/src/: fixtures.rs  lib.rs
crates/photo-frame-cli/: Cargo.toml
crates/photo-frame-cli/src/: main.rs
crates/photo-frame-cli/tests/: e2e.rs
crates/photo-frame-core/: Cargo.toml
crates/photo-frame-core/src/: decode.rs  encode.rs  error.rs  exif.rs  frame.rs  geometry.rs  lib.rs  num.rs  options.rs  orientation.rs  pipeline.rs  text.rs
crates/photo-frame-core/tests/: error_paths.rs  orientation_pipeline.rs
crates/photo-frame-decode/: Cargo.toml
crates/photo-frame-decode/src/: error.rs  exif.rs  format.rs  heif.rs  lib.rs  orientation.rs  test_support.rs
crates/photo-frame-decode/src/provenance/: camera.rs  datetime.rs  exposure.rs  mod.rs
crates/photo-frame-decode/tests/: decode_jpeg.rs  decode_png.rs  error_paths.rs  orientation_pipeline.rs  proptest_decode.rs
crates/photo-frame-encode/: Cargo.toml
crates/photo-frame-encode/src/: lib.rs
crates/photo-frame-frame/: Cargo.toml
crates/photo-frame-frame/src/: format.rs  geometry.rs  lib.rs  num.rs  options.rs  render.rs  text.rs
crates/photo-frame-frame/src/geometry/: composition.rs  mod.rs  rectangle.rs  spiral.rs
crates/photo-frame-types/: Cargo.toml
crates/photo-frame-types/src/: category.rs  lib.rs  photograph.rs  pixels.rs  preset.rs  primitives.rs  provenance.rs
crates/photo-frame-types/src/spec/: frame_style.rs  layout.rs  mod.rs  pipeline.rs  stage.rs  theme.rs
crates/photo-frame-wasm/: Cargo.toml  rust-toolchain.toml
crates/photo-frame-wasm/.cargo/: config.toml
crates/photo-frame-wasm/src/: lib.rs
crates/photo-frame-wasm/www/: index.html  package.json  panda.config.ts  postcss.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
crates/photo-frame-wasm/www/panda/: conditions.ts  global-css.ts  keyframes.ts  recipes.ts  tokens.ts
crates/photo-frame-wasm/www/src/: App.styles.ts  App.tsx  DropZone.test.tsx  DropZone.tsx  Gallery.styles.ts  Gallery.test.tsx  Gallery.tsx  GoldenSpiral.tsx  GoldenSpiralInward.tsx  frame-client.test.ts  frame-client.ts  frame-worker.ts  golden-spiral.test.ts  golden-spiral.ts  main.tsx  smoke.test.ts  styles.css  test-setup.ts
crates/photo-frame-wasm/www/src/components/: AppHeader.test.tsx  AppHeader.tsx  CanvasPreview.styles.ts  CanvasPreview.test.tsx  CanvasPreview.tsx  Field.styles.ts  Field.test.tsx  Field.tsx  Segmented.styles.ts  Segmented.test.tsx  Segmented.tsx  SidebarControls.styles.ts  SidebarControls.test.tsx  SidebarControls.tsx
crates/photo-frame-wasm/www/src/lib/: batch-sequencer.test.ts  batch-sequencer.ts  caption-mode.test.ts  caption-mode.ts  contain-fit.test.ts  contain-fit.ts  format.test.ts  format.ts  long-edge.test.ts  long-edge.ts  paint-preview.test.ts  paint-preview.ts  progress.test.ts  progress.ts  variant-cache.test.ts  variant-cache.ts  variants.test.ts  variants.ts  view-transition.ts  worker-channel.test.ts  worker-channel.ts
crates/photo-frame-wasm/www/src/state/: app-settings.test.ts  app-settings.ts  batch-session.test.ts  batch-session.ts  preview-session.test.ts  preview-session.ts
crates/photo-frame-wasm/www/src/styles/: global.css
crates/photo-frame/src/: batch.rs  lib.rs  options.rs  pipeline.rs  trace.rs
crates/photo-frame/tests/: batch.rs
docs/: DEVELOPMENT.md  EVENTS.md  PERF-REPORT-baseline.md  PERFORMANCE.md
samples/: README.md
scripts/: bench-build.sh  check-signing.sh  timings.sh
