[workspace]
resolver = "2"
members = [
    "crates/photo-frame-types",
    "crates/photo-frame-decode",
    "crates/photo-frame-frame",
    "crates/photo-frame-encode",
    "crates/photo-frame",
    "crates/photo-frame-cli",
    "crates/photo-frame-wasm",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.78"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/yasunobu/photo-frame"
authors      = ["photo-frame contributors"]

[workspace.dependencies]
photo-frame-types = { path = "crates/photo-frame-types" }
photo-frame-decode = { path = "crates/photo-frame-decode" }
photo-frame-frame = { path = "crates/photo-frame-frame" }
photo-frame-encode = { path = "crates/photo-frame-encode" }
photo-frame = { path = "crates/photo-frame" }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "tiff",
    "bmp",
    "webp",
] }
kamadak-exif = "0.6"
ab_glyph = "0.2"
imageproc = { version = "0.25", default-features = false }
thiserror = "1"
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = 3
strip         = "symbols"

[workspace.lints.rust]
unsafe_code                   = "forbid"
missing_debug_implementations = "warn"
unreachable_pub               = "warn"
unused_qualifications         = "warn"
elided_lifetimes_in_paths     = "warn"

[workspace.lints.clippy]
# Strict by default. NO pre-emptive allows — when a lint fires, fix the root cause.
# If a specific call site genuinely cannot satisfy a lint, attach a targeted
# `#[allow(clippy::lint_name, reason = "...")]` on that item only.
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
# Single workspace-level lint exception, justified:
# `redundant_pub_crate` (nursery) and `unreachable_pub` (rustc) give contradictory
# advice for `pub(crate) item` inside a private module. We deliberately keep
# `unreachable_pub` active so the public API surface stays small, which means we
# must disable `redundant_pub_crate` to avoid an unwinnable lint loop.
redundant_pub_crate = "allow"
