[workspace]
resolver = "2"
members = [
    "crates/photo-frame-types",
    "crates/photo-frame-decode",
    "crates/photo-frame-frame",
    "crates/photo-frame-encode",
    "crates/photo-frame",
    "crates/photo-frame-cli",
    "crates/photo-frame-wasm",
    "crates/photo-frame-bench",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.78"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/P4suta/photo-frame"
authors      = ["photo-frame contributors"]

[workspace.dependencies]
photo-frame-types = { path = "crates/photo-frame-types" }
photo-frame-decode = { path = "crates/photo-frame-decode" }
photo-frame-frame = { path = "crates/photo-frame-frame" }
photo-frame-encode = { path = "crates/photo-frame-encode" }
photo-frame = { path = "crates/photo-frame" }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "tiff",
    "bmp",
    "webp",
] }
# Faster JPEG decode path used by photo-frame-decode for the JPEG
# format (the most common input). Pure-Rust with internal SIMD
# acceleration on x86_64; falls back to scalar on wasm32. The image
# crate is still used for PNG / TIFF / BMP / WebP and for the
# `DynamicImage::apply_orientation` shim that turns EXIF
# Orientation 1..=8 into the right pixel layout.
zune-jpeg    = "0.5"
zune-core    = "0.5"
kamadak-exif = "0.6"
ab_glyph = "0.2"
imageproc = { version = "0.26", default-features = false, features = ["text"] }
thiserror = "2"
# miette provides typed `Diagnostic` derivation (a richer companion to
# thiserror) so every error variant carries a stable diagnostic code, a
# severity, and a `help` string the CLI's renderer can show as a
# styled, source-labelled report. `fancy` enables Unicode + ANSI
# rendering; the CLI gates it via its own feature so non-fancy outputs
# (JSON logs, CI runners) keep working.
miette             = "7"
tracing            = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
clap               = { version = "4", features = ["derive"] }
# Batch parallelism + progress reporting for the CLI front-end. WASM
# never pulls these — the Web Worker does its own off-main-thread
# strategy that does not require a runtime in the wasm binary.
rayon     = "1"
indicatif = "0.18"
num_cpus  = "1"
# Drop-in `Instant` shim that works on wasm32-unknown-unknown
# (delegates to `performance.now()` in the browser). Native targets
# get the std-lib implementation with zero overhead.
web-time = "1"
# anyhow was used by v1.x's CLI; v2.0 replaces it with miette so all
# error variants carry their diagnostic code + help text through to the
# user. Kept out of [workspace.dependencies] entirely — if any future
# code needs ad-hoc error construction, use miette::miette!() or
# miette::bail!().

[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = 3
strip         = "symbols"

# Phase 1.2 tuning.
#
# `cargo test` time was dominated by a single test — `photo-frame::pipeline::
# tests::sns_preset_caps_output_dimensions` — at ~15 s. It synthesises a
# 4000×3000 JPEG and drives the full decode → frame → encode pipeline,
# where image / kamadak-exif / imageproc spend almost all of that time in
# loops that benefit from any real optimisation level.
#
# `opt-level = 1` on the test profile gets ~10x speedup on that test without
# meaningfully changing compile time (we re-measured both with
# scripts/bench-build.sh).
#
# `package."*".opt-level = 3` keeps dependency crates fully optimised even
# in the dev/test profile. The dependency graph is large and immutable
# from the project's perspective; compiling these crates at -O3 once and
# caching the result yields a much faster inner loop than the cargo default
# of recompiling at -O0 on every `cargo test`.
[profile.test]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_code                   = "forbid"
missing_debug_implementations = "warn"
unreachable_pub               = "warn"
unused_qualifications         = "warn"
elided_lifetimes_in_paths     = "warn"

[workspace.lints.clippy]
# Strict by default. NO pre-emptive allows — when a lint fires, fix the root cause.
# If a specific call site genuinely cannot satisfy a lint, attach a targeted
# `#[allow(clippy::lint_name, reason = "...")]` on that item only.
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
# Single workspace-level lint exception, justified:
# `redundant_pub_crate` (nursery) and `unreachable_pub` (rustc) give contradictory
# advice for `pub(crate) item` inside a private module. We deliberately keep
# `unreachable_pub` active so the public API surface stays small, which means we
# must disable `redundant_pub_crate` to avoid an unwinnable lint loop.
redundant_pub_crate = "allow"
