[package]
name                   = "photo-frame-cli"
description            = "Command-line interface for photo-frame."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "photo-frame"
path = "src/main.rs"

[features]
default = []
heif    = ["photo-frame/heif"]

[dependencies]
photo-frame = { workspace = true }
clap        = { workspace = true }
thiserror   = { workspace = true }
# miette + fancy: rich CLI diagnostic renderer (Unicode boxes, ANSI,
# source labels, severity colour). Replaces the previous anyhow chain
# walker so every error variant in the workspace surfaces with its
# diagnostic `code` + `help` automatically.
miette             = { workspace = true, features = ["fancy"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }


[dev-dependencies]
# Binary-level E2E tests under `tests/e2e/`. assert_cmd drives the
# compiled CLI as a subprocess and asserts on stdout / stderr /
# exit code; predicates is its assertion language; tempfile gives
# us a per-test scratch directory that auto-cleans.
assert_cmd = "2"
predicates = "3"
tempfile   = "3"
image      = { workspace = true }
serde_json = "1"

[lints]
workspace = true
