[package]
name                   = "photo-frame-decode"
description            = "Decode arbitrary input formats into a canonical Photograph."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[features]
default = []
# Adds HEIC / HEIF input support via libheif-rs. Requires a system libheif
# install at build- and run-time. Opt-in because this is the only path that
# breaks the Pure Rust contract; see deny.toml's skip-tree exemption.
heif = ["dep:libheif-rs"]

[dependencies]
photo-frame-types = { workspace = true }
image             = { workspace = true }
kamadak-exif      = { workspace = true }
thiserror         = { workspace = true }
miette            = { workspace = true }
tracing           = { workspace = true }
libheif-rs        = { version = "1", optional = true }

[dev-dependencies]
# Captures `tracing` events during tests so we can pin warn/debug messages
# as part of the observability contract.
tracing-test = { version = "0.2", default-features = false }
# proptest drives the random-input fuzz tests under `tests/proptest_*.rs`.
# Aim: every public decode entry point returns `Ok(Photograph)` or a
# typed `DecodeError`, never panics, for any byte slice or EXIF blob.
proptest = "1"

[lints]
workspace = true
