[package]
name                   = "photo-frame-decode"
description            = "Decode arbitrary input formats into a canonical Photograph."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[features]
default = []
# Adds HEIC / HEIF input support via libheif-rs. Requires a system libheif
# install at build- and run-time. Opt-in because this is the only path that
# breaks the Pure Rust contract; see deny.toml's skip-tree exemption.
heif = ["dep:libheif-rs"]

[dependencies]
photo-frame-types = { workspace = true }
# Used for PNG / TIFF / BMP / WebP decode and for the
# `DynamicImage::apply_orientation` helper. JPEG decode no longer
# goes through this crate — see zune-jpeg below.
image        = { workspace = true }
# Fast pure-Rust JPEG decoder (internal SIMD on x86_64, scalar on
# wasm32). Replaces the image-crate JPEG path for the most common
# input format; PERF-REPORT-baseline.md ranked decode at 22 % of
# pipeline wall-clock, with JPEG dominating that.
zune-jpeg    = { workspace = true }
# `zune-core` carries the `ColorSpace` / `DecoderOptions` types
# `zune-jpeg` consumes — we set the output colorspace to RGBA8 so
# the orientation pass can re-use the existing
# `DynamicImage::apply_orientation` code path without a refactor.
zune-core    = { workspace = true }
kamadak-exif = { workspace = true }
thiserror    = { workspace = true }
miette       = { workspace = true }
tracing      = { workspace = true }
libheif-rs   = { version = "1", optional = true }

[dev-dependencies]
# Captures `tracing` events during tests so we can pin warn/debug messages
# as part of the observability contract.
tracing-test = { version = "0.2", default-features = false }
# proptest drives the random-input fuzz tests under `tests/proptest_*.rs`.
# Aim: every public decode entry point returns `Ok(Photograph)` or a
# typed `DecodeError`, never panics, for any byte slice or EXIF blob.
proptest = "1"

[lints]
workspace = true
