[package]
name                   = "photo-frame-encode"
description            = "Encode a Pixels grid to a chosen output format (currently JPEG only)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
photo-frame-types = { workspace = true }
image             = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }

[lints]
workspace = true
