[package]
name                   = "photo-frame-frame"
description            = "Render a Photograph into a framed RGBA Pixels grid (golden-ratio layout + caption)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
photo-frame-types = { workspace = true }
image             = { workspace = true }
# Multi-threaded SIMD-accelerated resize for the SNS-preset downscale.
# Workspace pins the `rayon` feature so native CLI runs use a worker
# pool; wasm32 ignores it (no thread spawn) but still benefits from
# the SIMD path when `+simd128` is enabled at build time.
fast_image_resize = { workspace = true }
imageproc         = { workspace = true }
ab_glyph          = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }

[lints]
workspace = true
