[package]
name                   = "photo-frame-types"
description            = "Canonical data types shared across the photo-frame pipeline."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
miette    = { workspace = true }
serde     = { workspace = true }

# Tsify generates `.d.ts` declarations from the same Serde shape the
# WASM bridge uses, so JS consumers of `StageEvent` / `PipelineSpec`
# receive a typed discriminated union instead of `any`. wasm32-only
# so host builds (clippy, tests) stay free of wasm-bindgen.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tsify-next   = { version = "0.5", default-features = false, features = ["js"] }
wasm-bindgen = "0.2"

[dev-dependencies]
# Used by `spec::stage` tests to pin the canonical FFI encoding of
# `Stage` (lowercase strings). Production code uses
# `serde_wasm_bindgen` over in `photo-frame-wasm`, not `serde_json`.
serde_json = "1"

[lints]
workspace = true
