[package]
name        = "photo-frame-wasm"
description = "WASM bindings for photo-frame, intended for browser use."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
crate-type = ["cdylib", "rlib"]
path       = "src/lib.rs"

[dependencies]
photo-frame-core         = { path = "../photo-frame-core" }
wasm-bindgen             = "0.2"
serde                    = { version = "1", features = ["derive"] }
serde-wasm-bindgen       = "0.6"
console_error_panic_hook = "0.1"
tracing                  = { workspace = true }
tracing-wasm             = "0.2"

[lints]
workspace = true

# wasm-pack ships a `wasm-opt` binary that lags behind rustc's emitted WASM
# features (bulk-memory, nontrapping-fptoint). Rather than pin an old toolchain
# locally, we skip wasm-opt and let downstream tooling (CI / Docker image) run
# a current `wasm-opt` against the released bundle if size optimisation is
# wanted.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
