[package]
name                   = "photo-frame-wasm"
description            = "WASM bindings for photo-frame, intended for browser use."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
crate-type = ["cdylib", "rlib"]
path       = "src/lib.rs"

[dependencies]
photo-frame              = { workspace = true }
wasm-bindgen             = "0.2"
js-sys                   = "0.3"
serde                    = { version = "1", features = ["derive"] }
serde-wasm-bindgen       = "0.6"
console_error_panic_hook = "0.1"
tracing                  = { workspace = true }
tracing-wasm             = "0.2"

# Phase F2 — wasm threads for rayon-aware code paths
# (compose_canvas par_chunks_mut + fast_image_resize). wasm32-only
# target dep so workspace-host builds (`cargo build --workspace`
# on x86_64) don't try to compile it. Wasm32 builds pick it up via
# the per-crate `.cargo/config.toml` + nightly toolchain pin
# (`rust-toolchain.toml` in the same directory). Runtime use of
# threads still requires the host page to be `crossOriginIsolated`
# — the web bundle ships `coi-serviceworker` to satisfy that on
# GitHub Pages.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = "1"

[lints]
workspace = true

# wasm-pack ships a `wasm-opt` binary that lags behind rustc's emitted WASM
# features (bulk-memory, nontrapping-fptoint). Rather than pin an old toolchain
# locally, we skip wasm-opt and let downstream tooling (CI / Docker image) run
# a current `wasm-opt` against the released bundle if size optimisation is
# wanted.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
