[package]
name                   = "photo-frame"
description            = "Liit-style golden-ratio photo framing — facade re-exporting the decode/frame/encode pipeline."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[features]
default = []
# Forwards to photo-frame-decode/heif. Opt-in C-dep path for HEIC input.
heif = ["photo-frame-decode/heif"]
# Span-timing flamegraph capture. Adds the `tracing-flame` layer
# behind [`trace::flame_guard`]; the output is a `.folded` file the
# `inferno-flamegraph` tool turns into an SVG. Opt-in because the
# layer adds per-span IO overhead that nobody wants in a production
# CLI run. Used by `just profile-trace` and the future
# `--profile-trace=PATH` CLI flag (Phase E).
trace = ["dep:tracing-flame", "dep:tracing-subscriber"]

[dependencies]
photo-frame-types  = { workspace = true }
photo-frame-decode = { workspace = true }
photo-frame-frame  = { workspace = true }
photo-frame-encode = { workspace = true }
thiserror          = { workspace = true }
miette             = { workspace = true }
tracing            = { workspace = true }
tracing-flame      = { version = "0.2", optional = true }
tracing-subscriber = { workspace = true, optional = true }
web-time           = { workspace = true }

[dev-dependencies]
# Used by integration-style tests to synthesise small JPEGs in-process
# rather than committing binary fixtures.
image = { workspace = true }

[lints]
workspace = true
